--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
           <a href="https://github.com/owlinux/divide/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
         </section>
         
+      </div>
+      
+      <div class="exnner">
         <section id="main_content">
           <h1>Window Resize and Window Move just Easy</h1>
           <p><h1>No Mouse and No Trackpad using Shortcuts Keyboard just Easy</h1></p>
