--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="exnner">
         <section id="main_content">
           <title1>Window Resize and Window Move just Easy</title1>
-          <p><h1>No Mouse and No Trackpad, Only Shortcuts Keyboard</h1></p>
+          <p><title1>No Mouse and No Trackpad, Only Shortcuts Keyboard</title1></p>
           <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you're using GitHub for Mac or GitHub for Windows, simply sync your repository and you'll see the new branch.</p>
           
           <h3>Designer Templates</h3>
