--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <p><h1>No Mouse and No Trackpad, Only Shortcuts Keyboard</h1></p>
           
           <h3>Window Action</h3>
+          <p>Windows can be moved to a number of predefined regions of the scree
           <ul>
             <li>Full Screen : ⌥⌘C</li>
             <li>Left half Screen : ⌥⌘←</li>
@@ -49,7 +50,8 @@
             <li>Move to the upper right — ⌃⌘→</li>
             <li>Move to the lower right — ⌃⇧⌘→</li>
           </ul>
-
+          </p>
+          
           <h3>Creating pages manually</h3>
           <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
         </section>
