--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
           
           <h3>Window Action</h3>
           <p>Windows can be moved to a number of predefined regions of the scree
+          
+            <ul li>Full Screen : ⌥⌘C  </ul li>
           <ul>
-            <li>Full Screen : ⌥⌘C</li>
             <li>Left half Screen : ⌥⌘←</li>
             <li>Right half Screen : ⌥⌘→</li>
             <li>Top half : ⌥⌘↑</li>
