--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
           <ul li>  
           <ul>
             <li>Full Screen : ⌥⌘C  </ui>
-            <li>Left half Screen : ⌥⌘←</li>
-            <li>Right half Screen : ⌥⌘→</li>
-            <li>Top half : ⌥⌘↑</li>
-            <li>Bottom half : ⌥⌘↓ </li>
-            <li>Move to the upper left — ⌃⌘←</li>
-            <li>Move to the lower left — ⌃⇧⌘←</li>
-            <li>Move to the upper right — ⌃⌘→</li>
-            <li>Move to the lower right — ⌃⇧⌘→</li>
+            <li>Left Half Screen : ⌥⌘←</li>
+            <li>Right Half Screen : ⌥⌘→</li>
+            <li>Top Half Screen : ⌥⌘↑</li>
+            <li>Bottom Half Screen : ⌥⌘↓ </li>
+            <li>Upper Left Top : ⌃⌘←</li>
+            <li>Lower Left Bottom: ⌃⇧⌘←</li>
+            <li>Upper Right Top : ⌃⌘→</li>
+            <li>Lower Right Bottom : ⌃⇧⌘→</li>
           </ul>
           </ul li>
           </p>
