--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <hr>
       
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/owlinux/divide/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/owlinux/divide/zipball/master" id="appstore" class="button"><span>Download .zip</span></a>
         </section>
         
       </div>
