--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           
         <ul li>  
           <ul>
-            <li>Full Screen : ⌥⌘C  </ui>
+            <li>Full Screen : ⌥⌘F  </ui>
             <li>Left Half Screen : ⌥⌘←</li>
             <li>Right Half Screen : ⌥⌘→</li>
             <li>Top Half Screen : ⌥⌘↑</li>
