--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <hr>
         
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/owlinux/divide/zipball/master"><image src="./images/hr.png" /></a>
+          <a href="https://github.com/owlinux/divide/app/Divide.app.zip" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/owlinux/divide/zipball/master"><image src="./images/Apple-appstore.png" /></a>
         </section>
       
       <section id="main_content">
