--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <hr>
         
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/owlinux/divide/blob/gh-pages/app/Divide.app.zip" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://www.dropbox.com/s/shbwt8s9r35kljr/Divide.app.zip?dl=0" id="download-zip" class="button"><span>Download .zip</span></a>
           <!--
           <a href="https://github.com/owlinux/divide/zipball/master"><image src="./images/Apple-appstore.png" /></a>
           -->
