--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
           </ul>
         </ul li>
         </p>
+        
+      <h3>How to Install</h3>
+        <p>Divide dont's support Apple's AppStore. And Divide must be installed in Offline.</p>
+        <ul li>  
+          <ul>
+            <li>Download Divide.app.zip and unzip.</ui>
+            <li>Move "/Applications/Divide.app" </li>
+          </ul>
+        </ul li>
       </section>
 
       <footer>
