--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
       <div class="exnner">
           <title1>Window Resize and Move just Easy</title1>
-          <p><h1>No Mouse and No Trackpad, Only Shortcuts Keyboard</h1></p>
+          <p><h1>No Mouse and No Trackpad, Only Keyboard Shortcuts</h1></p>
       </div>
       
       <h3>Window Action</h3>
